# predicttion

./: .env.example  .gitignore  .replit  Anchor.toml  Cargo.toml  DEPLOY.md  PROGRAM_KEYPAIR.json  README.md  design_guidelines.md  package-lock.json  package.json  replit.md  tailwind.config.ts  wallet.json
.github/workflows/: deploy-solana.yml
anchor/: Anchor.toml
attached_assets/: Pasted--Adding-wasi-v0-9-0-wasi-snapshot-preview1-latest-v0-14_1766955874131.txt  Pasted--Compiling-unicode-width-v0-1-11-Compiling-num-enum-v0-_1766944808234.txt  Pasted--role-Eres-un-asistente-senior-full-stack-Solana-Anchor_1766879119253.txt  Pasted-29s-Run-echo-Build-Environment-Build-Environment-Rust-r_1766968249333.txt  Pasted-5m-59s-Run-echo-Build-Environment-Build-Environment-Rus_1766969455647.txt  Pasted-Run-echo-Build-Environment-Build-Environment-Rust-rustc_1766965998858.txt  Pasted-Run-echo-Build-Environment-Build-Environment-Rust-rustc_1766967502928.txt  Pasted-Run-echo-Building-Anchor-program-Building-Anchor-progra_1766942489391.txt  Pasted-Run-echo-Building-Anchor-program-Building-Anchor-progra_1766961155001.txt  Pasted-Run-echo-Building-Anchor-program-echo-Building-Anchor-p_1766941498245.txt  branding-1766891075829.json
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: betting-panel.tsx  empty-state.tsx  (+10 more)
keeper/: index.ts  package.json
programs/pm15/: Anchor.toml  Cargo.toml
programs/pm15/src/: lib.rs
scripts/: deploy.sh  initialize-program.ts
server/: pythService.ts  routes.ts  storage.ts
shared/: anchor-idl.ts  schema.ts
(+5 files in other folders)
