[package]
name = "pm15"
version = "0.1.0"
description = "SOL15 Prediction Markets - 15-minute UP/DOWN markets on SOL/USD"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pm15"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.16.23"

[dependencies.pyth-solana-receiver-sdk]
git = "https://github.com/pyth-network/pyth-crosschain"
rev = "f2b5f33"
package = "pyth-solana-receiver-sdk"
